# docs/swagger.yaml
@@ -1,17 +1,5 @@
 basePath: /
 definitions:
-  handler.LivenessResponse:
-    properties:
-      status:
-        example: OK
-        type: string
-    type: object
-  handler.ReadinessResponse:
-    properties:
-      status:
-        example: OK
-        type: string
-    type: object
   handler.createConcertRequest:
     properties:
       date:
@@ -43,6 +31,21 @@ definitions:
         example: Concert Venue
         type: string
     type: object
+  handler.findAllConcertsResponse:
+    properties:
+      date:
+        example: "2025-01-01T10:00:00+07:00"
+        type: string
+      id:
+        example: 123e4567-e89b-12d3-a456-426614174000
+        type: string
+      name:
+        example: Concert Name
+        type: string
+      venue:
+        example: Concert Venue
+        type: string
+    type: object
   handler.findOneConcertResponse:
     properties:
       date:
@@ -58,13 +61,35 @@ definitions:
         example: Concert Venue
         type: string
     type: object
+  handler.livenessResponse:
+    properties:
+      status:
+        example: OK
+        type: string
+    type: object
+  handler.readinessResponse:
+    properties:
+      status:
+        example: OK
+        type: string
+    type: object
   httpresponse.ErrorResponse:
     properties:
       code:
+        example: TR-XXXXXX
         type: string
       data: {}
       message:
+        example: Error message
         type: string
+    type: object
+  httpresponse.SuccessResponse:
+    properties:
+      code:
+        example: TR-200000
+        type: string
+      data: {}
+      metadata: {}
     type: object
 host: localhost:8080
 info:
@@ -76,6 +101,58 @@ info:
   version: "1.0"
 paths:
   /concerts:
+    get:
+      description: List all concerts, filterable by date range and venue
+      parameters:
+      - description: 'Start date (format: 2006-01-02) (UTC+7)'
+        in: query
+        name: startDate
+        type: string
+      - description: 'End date (format: 2006-01-02) (UTC+7)'
+        in: query
+        name: endDate
+        type: string
+      - description: Venue name (partial match)
+        in: query
+        name: venue
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of concerts
+          schema:
+            allOf:
+            - $ref: '#/definitions/httpresponse.SuccessResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/handler.findAllConcertsResponse'
+                  type: array
+                metadata:
+                  type: object
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            allOf:
+            - $ref: '#/definitions/httpresponse.ErrorResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
+        "500":
+          description: Internal server error
+          schema:
+            allOf:
+            - $ref: '#/definitions/httpresponse.ErrorResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
+      summary: List Concerts
+      tags:
+      - Concert
     post:
       consumes:
       - application/json
@@ -93,15 +170,32 @@ paths:
         "201":
           description: Concert created
           schema:
-            $ref: '#/definitions/handler.createConcertResponse'
+            allOf:
+            - $ref: '#/definitions/httpresponse.SuccessResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/handler.createConcertResponse'
+                metadata:
+                  type: object
+              type: object
         "400":
           description: Bad request
           schema:
-            $ref: '#/definitions/httpresponse.ErrorResponse'
+            allOf:
+            - $ref: '#/definitions/httpresponse.ErrorResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/httpresponse.ErrorResponse'
+            allOf:
+            - $ref: '#/definitions/httpresponse.ErrorResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
       summary: Create Concert
       tags:
       - Concert
@@ -120,15 +214,41 @@ paths:
         "200":
           description: Concert found
           schema:
-            $ref: '#/definitions/handler.findOneConcertResponse'
+            allOf:
+            - $ref: '#/definitions/httpresponse.SuccessResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/handler.findOneConcertResponse'
+                metadata:
+                  type: object
+              type: object
+        "400":
+          description: Bad request
+          schema:
+            allOf:
+            - $ref: '#/definitions/httpresponse.ErrorResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
         "404":
           description: Concert not found
           schema:
-            $ref: '#/definitions/httpresponse.ErrorResponse'
+            allOf:
+            - $ref: '#/definitions/httpresponse.ErrorResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
         "500":
           description: Internal server error
           schema:
-            $ref: '#/definitions/httpresponse.ErrorResponse'
+            allOf:
+            - $ref: '#/definitions/httpresponse.ErrorResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
       summary: Find Concert by ID
       tags:
       - Concert
@@ -141,11 +261,23 @@ paths:
         "200":
           description: Success response
           schema:
-            $ref: '#/definitions/handler.LivenessResponse'
+            allOf:
+            - $ref: '#/definitions/httpresponse.SuccessResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/handler.livenessResponse'
+                metadata:
+                  type: object
+              type: object
         default:
           description: Default error response
           schema:
-            $ref: '#/definitions/httpresponse.ErrorResponse'
+            allOf:
+            - $ref: '#/definitions/httpresponse.ErrorResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
       security:
       - BasicAuth: []
       summary: Liveness
@@ -160,11 +292,23 @@ paths:
         "200":
           description: Success response
           schema:
-            $ref: '#/definitions/handler.ReadinessResponse'
+            allOf:
+            - $ref: '#/definitions/httpresponse.SuccessResponse'
+            - properties:
+                data:
+                  $ref: '#/definitions/handler.readinessResponse'
+                metadata:
+                  type: object
+              type: object
         default:
           description: Default error response
           schema:
-            $ref: '#/definitions/httpresponse.ErrorResponse'
+            allOf:
+            - $ref: '#/definitions/httpresponse.ErrorResponse'
+            - properties:
+                data:
+                  type: object
+              type: object
       security:
       - BasicAuth: []
       summary: Readiness
